--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,10 @@
-.body{
-    background-color: snow;
+body{
+    /* background-color: rgb(228,202, 168); */
 }
 
-.div{
-    background-color: greenyellow;
+div{
+    background-color: rgb(228,202, 168);
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 }
