--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,18 @@
-body{
-    /* background-color: rgb(228,202, 168); */
-}
+
+/* ELEMENT SECTORS */
+/* body{
+    background-color: rgb(228,202, 168);
+} */
 
 div{
     background-color: rgb(228,202, 168);
     width: 80%;
     margin-left: auto;
     margin-right: auto;
+}
+
+/* CLASSNAME SELECTORS */
+
+.teaMenu{
+    background-color: rgb(228,202, 168);
 }
