--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,18 @@ div {
     background-color: rgb(228, 202, 168);
 }
 
+.teaItem p{
+    background-color: greenyellow;
+    display: inline-block;
+}
+
 .teaFlavor {
     text-align: left;
+    width: 50%;
 }
+
+.teaPrice {
+    text-align: right;
+    width: 49%;
+}
+
