--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,9 @@ div {
 /* CLASSNAME SELECTORS */
 
 .teaMenu {
-    background-color: rgb(228, 202, 168);
+    background-color: rgba(228, 202, 168, 0.584);
+    padding-right: 20px;
+    padding-left: 20px;
 }
 
 .teaItem p {
@@ -26,13 +28,13 @@ div {
     display: inline-block;
 }
 
-.teaFlavor {
+.teaFlavor, .teaCollection {
     background-color: lightgreen;
     text-align: left;
     width: 75%;
 }
 
-.teaPrice {
+.teaPrice, .collectionPrice {
     background-color: lightcoral;
     text-align: right;
     width: 25%;
