--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,7 @@ div {
 
 .teaMenu {
     background-color: rgba(228, 202, 168, 0.584);
-    padding-right: 20px;
-    padding-left: 20px;
+    padding: 20px;
 }
 
 .teaItem p {
